db migrations and connections

--- a/FormalRPG/FormalRPG/appsettings.json
+++ b/FormalRPG/FormalRPG/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-FormalRPG-605ea944-1152-4601-a162-4df05e322c96;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Host=localhost;Username=postgres;Port=5432;Database=postgres;Password=DBPassword"
   },
   "Logging": {
     "LogLevel": {
